# m2_core

m2_launch/: CMakeLists.txt  package.xml
m2_launch/config/: m2_config.yaml
m2_launch/launch/: m2_launch.py  test.launch.py
m2_supervisor/: CMakeLists.txt  package.xml
m2_supervisor/include/m2_supervisor/: BagAnalyzer.h  EmailSender.h  Logger.h  Snoozer.h
m2_supervisor/src/: BagAnalyzer.cpp  EmailSender.cpp  Logger.cpp  Snoozer.cpp  m2_supervisor_node.cpp
modaq_messages/: CMakeLists.txt  package.xml
modaq_messages/msg/: Bagcontrol.msg  Buoy.msg  Ed582.msg  Hmi.msg  LjDo.msg  Systemmsg.msg  T8ain.msg  T8ainstream.msg  T8dac.msg
service/: README.md  modaq.service  phc2sys.service  ptp4l.conf  ptp4l.service
